<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f5f5ef"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:contentDescription="@string/company_name"
            android:scaleType="fitStart"
            android:src="@drawable/catla" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/about_us"
            android:textColor="#000000"
            android:textSize="26sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textColor="#000000"
            android:text="@string/para_one" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/contact_us"
            android:textColor="#000000"
            android:textSize="26sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/company_name"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/working_hours"
            android:textColor="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:src="@drawable/address" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="map"
                android:linksClickable="true"
                android:paddingBottom="15dp"
                android:paddingEnd="15dp"
                android:paddingLeft="10dp"
                android:paddingRight="15dp"
                android:paddingStart="10dp"
                android:text="@string/address"
                android:textColor="#000000"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:src="@drawable/phone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="phone"
                android:linksClickable="true"
                android:paddingBottom="15dp"
                android:paddingEnd="15dp"
                android:paddingLeft="10dp"
                android:paddingRight="15dp"
                android:paddingStart="10dp"
                android:text="@string/phone_no"
                android:textColor="#000000"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:src="@drawable/email" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="email"
                android:linksClickable="true"
                android:paddingBottom="15dp"
                android:paddingEnd="15dp"
                android:paddingLeft="10dp"
                android:paddingRight="15dp"
                android:paddingStart="10dp"
                android:text="@string/email"
                android:textColor="#000000"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:src="@drawable/web" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:linksClickable="true"
                android:paddingBottom="15dp"
                android:paddingEnd="15dp"
                android:paddingLeft="10dp"
                android:paddingRight="15dp"
                android:paddingStart="10dp"
                android:text="@string/web"
                android:textColor="#000000"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>